--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ғ11</title>
-    <link rel="icon" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poiret+One&family=Roboto&display=swap"
@@ -15,9 +14,8 @@
     <script defer src="script.js"></script>
   </head>
 
-  <body id="background" class="img">
-
-    <div class="sidebar-container">
+  <body id="background">
+    <!-- <div class="sidebar-container">
  
       <div class="text-title">Customise</div>
 
@@ -130,12 +128,11 @@
 
       <a class="sidebar-footer"  href="/#"><p class="sidebar-footer" >© Renato Oliveira </p></a></span></div>
 
-    </div>
+    </div> -->
 
     <div class="clock-container">
-      <div class="on" id="clock"> </div>
-      <div class="on" id="date"> </div>
+      <div class="on" id="clock">hello</div>
+      <div class="on" id="date"></div>
     </div>
-
   </body>
 </html>
