back to original

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body id="background">
-    <!-- <div class="sidebar-container">
+    <div class="sidebar-container">
  
       <div class="text-title">Customise</div>
 
@@ -128,7 +128,7 @@
 
       <a class="sidebar-footer"  href="/#"><p class="sidebar-footer" >© Renato Oliveira </p></a></span></div>
 
-    </div> -->
+    </div>
 
     <div class="clock-container">
       <div class="on" id="clock">hello</div>
