--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
       <hr />
 
       <div class="display-settings">
-        <div id="clockBtn" class="btn-active">
+        <button id="clockBtn" class="btn-active">
           Clock
-        </div>
+        </button>
         
-        <div id="dateBtn" class="btn-active">
+        <button id="dateBtn" class="btn-active">
           Date
-        </div>
+        </button>
 
         <button id="fullScreen" class="btn-active">
           Full Screen
@@ -131,7 +131,7 @@
     </div>
 
     <div class="clock-container">
-      <div class="on" id="clock">hello</div>
+      <div class="on" id="clock"></div>
       <div class="on" id="date"></div>
     </div>
   </body>
