what to change/add

--- a/index.html
+++ b/index.html
@@ -6,20 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ғ11</title>
     <link rel="icon" type="image/png" href="img/favicon.png" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poiret+One&family=Roboto&display=swap"
-    />
     <link rel="stylesheet" href="style.min.css" />
     <script defer src="script.js"></script>
   </head>
 
   <body id="background">
-    <div class="sidebar-container">
- 
-      <div class="text-title">Customise</div>
 
-      <div class="text-color">
+    <div class="sidebar-container">
+      <div class="text-title">Customise</div>
 
         <span>
           <div class="dropdown">
@@ -34,81 +28,9 @@
             </div>
           </div>
         </span>
-
-        <span>
-          <div class="tooltip">
-          <input class="text--color" type="color" value="#ffffff" />
-          <br>
-          <span class="tooltiptext"> Change the <br>text color </span>
-        </span>
-
-      </div>
-    </div>
-
+        
     <hr>
 
-    <div class="bg--img">
-      <div class="bg--title">Background</div>
-        <div class="">
-          <img src="./img/bg01-icon.jpg" class="bg-image"/>
-        </div>
-        <div class="">
-          <img src="./img/bg02-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg03-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg04-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg05-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg06-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg07-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg08-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg09-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg10-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg11-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg12-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg13-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg14-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg15-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg16-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg17-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg18-icon.jpg" class="bg-image" />
-        </div>
-        <div class="">
-          <img src="./img/bg19-icon.jpg" class="bg-image" />
-        </div>
-        <input class="bg--color" type="color" value="#ff0000" />
-      </div>
-      <hr />
 
       <div class="display-settings">
         <button id="clockBtn" class="btn-active">
@@ -134,5 +56,27 @@
       <div class="on" id="clock"></div>
       <div class="on" id="date"></div>
     </div>
+  
+
   </body>
 </html>
+
+
+<!-- 
+  1)
+  USE SLIDER FOR FONT SIZE
+  
+  2)
+  ADD 5 color schemes
+  Solid Light
+  Solid Dark
+  Vector Light
+  Vector Dark
+  Dynamic (changes based on time of day)
+
+  3)
+  ADD moveable post its
+
+  4)
+  Change Timezone
+ -->
