btn and still thinking best way to progress

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <div class="sidebar-container">
       <div class="text-title">Customise</div>
-
         <span>
           <div class="dropdown">
             <button class="dropbtn">Ғont</button>
@@ -34,21 +33,25 @@
 
       <div class="display-settings">
         <button id="clockBtn" class="btn-active">
-          Clock
+          Toggle clock
         </button>
         
         <button id="dateBtn" class="btn-active">
-          Date
+          Toggle date
+        </button>
+
+        <button id="noteBtn" class="btn-active">
+          Toggle notes
         </button>
 
         <button id="fullScreen" class="btn-active">
-          Full Screen
+          Toggle fullscreen
         </button>
 
       </div>
       <br />
 
-      <a class="sidebar-footer"  href="/#"><p class="sidebar-footer" >© Renato Oliveira </p></a></span></div>
+      <a class="sidebar-footer"  href="/#"><p class="sidebar-footer" >© Ren Oliveira </p></a></span></div>
 
     </div>
 
